major updates - backpropagation

--- a/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
+++ b/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
@@ -1,8 +1,8 @@
 \part{Aktuelle Entwicklung}
 
-% Im folgenden Abschnitt werde ich auf die aktuelle Entwicklung der neuronalen Netze eingehen. Insbesondere wird dabei auch noch einmal der Lernalgorithmus dieser Netze beschrieben und wofür welche genauen Arten von Architekturen verwendet werden. 
+Im folgenden Abschnitt werde ich auf die aktuelle Entwicklung der neuronalen Netze eingehen. Insbesondere wird dabei auch noch einmal der Lernalgorithmus (Backpropagation) dieser Netze beschrieben und wofür welche genauen Arten von Architekturen verwendet werden. Die Mathematik hierbei ist durchaus relativ fortgeschritten sodass sich ein Blick in das frei (kostenlos) verfügbare E-Book \emph{Neural Networks and Deep Learning} von Michael Nielsen \cite{dlnielsen} durchaus sehr lohnt. 
 
-% Daraus resultieren folgende Leitfragen: 
+Daraus resultieren folgende Leitfragen: 
 
 \begin{itemize}
 \item Wo können diese Verfahren eingesetzt werden, bzw. wo werden diese bereits eingesetzt?
