--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -21,6 +21,10 @@
 % Listen mit mehreren Spalten
 \usepackage{multicol}
 
+% Tree diagrams 
+\usepackage[nocenter]{qtree}
+\usepackage{tree-dvips}
+
 % Math
 \usepackage{amsmath}
 \usepackage{amssymb}
