--- a/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
+++ b/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
@@ -1,6 +1,6 @@
 \part{Aktuelle Entwicklung}
 
-Im folgenden Abschnitt werde ich auf die aktuelle Entwicklung der neuronalen Netze eingehen. Insbesondere wird dabei auch noch einmal der Lernalgorithmus (Backpropagation) dieser Netze beschrieben und wofür welche genauen Arten von Architekturen verwendet werden. Die Mathematik hierbei ist durchaus relativ fortgeschritten sodass sich ein Blick in das frei (kostenlos) verfügbare E-Book \emph{Neural Networks and Deep Learning} von Michael Nielsen \cite{dlnielsen} durchaus sehr lohnt. 
+Im folgenden Abschnitt werde ich auf die aktuelle Entwicklung der neuronalen Netze eingehen. Insbesondere wird dabei auch noch einmal der Lernalgorithmus (Backpropagation) dieser Netze beschrieben und wofür welche genauen Arten von Architekturen verwendet werden. Die Mathematik hierbei ist durchaus relativ fortgeschritten sodass sich ein Blick in das frei (kostenlos) verfügbare E-Book \emph{Neural Networks and Deep Learning} von Michael Nielsen \cite{dlnielsen} sehr lohnt. 
 
 Daraus resultieren folgende Leitfragen: 
 
@@ -10,5 +10,8 @@ Daraus resultieren folgende Leitfragen:
 \end{itemize}
 
 \import{aktuelleEntwicklung/backpropagation/}{backpropagation.tex}
+\clearpage
+
+\import{aktuelleEntwicklung/multilayerPerceptron/}{multilayerPerceptron.tex}
 \clearpage
 
