--- a/paper/tex/aktuelleEntwicklung/architekturen/architekturen_anhang.tex
+++ b/paper/tex/aktuelleEntwicklung/architekturen/architekturen_anhang.tex
@@ -1,5 +1,7 @@
 \section{Architekturen}
 
+\subsection{Artenübersicht}
+
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.7\linewidth]{img/architektur_uebersicht}
