--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -25,6 +25,9 @@
 \usepackage[nocenter]{qtree}
 \usepackage{tree-dvips}
 
+% mehrere Spalten bei Listen
+\usepackage{multicol}
+
 % Math
 \usepackage{amsmath}
 \usepackage{amssymb}
