--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -60,7 +60,7 @@
 
 @misc{cnnFunktionsweise2,
   title = {{Funktionsweise - CNN}},
-  howpublished = {\url{https://jaai.de/convolutional-neural-networks-cnn-aufbau-funktion-und-anwendungsgebiete-1691/}},
+  howpublished = {\url{https://bit.ly/2QGK0Ej}},
   note = {Aufgerufen am: 18-03-2020}
 }
 
@@ -68,6 +68,12 @@
   title = {{Übersicht - verschiedene Architekturen}},
   howpublished = {\url{https://www.asimovinstitute.org/neural-network-zoo/}},
   note = {Aufgerufen am: 22-03-2020}
+}
+
+@misc{ss,
+  title = {{Künstliche Neuronale Netzwerke und Deep Learning - Stefan Stelle}},
+  howpublished = {\url{https://www.htwsaar.de/wiwi/fakultaet/personen/profile/selle-stefan/Selle2018e_Kuenstliche_Neuronale_Netzwerke.pdf/at_download/file}},
+  note = {Aufgerufen am: 24-03-2020}
 }
 
 @book{dlnielsen,
