created new branch

--- a/paper/tex/aktuelleEntwicklung/backpropagation/backpropagation.tex
+++ b/paper/tex/aktuelleEntwicklung/backpropagation/backpropagation.tex
@@ -49,7 +49,7 @@ Mit diesen Zusammenfassungen kann nun die Gleichung \ref{eq:act} folgendermaßen
 
 Diese Umschreibung abstrahiert das Denken über die lokalen Neuronen auf ein höheres Level sodass es einfacher ist das Gesamtbild zu betrachten. Um noch mehr Klarheit zu schaffen wird oftmals die Aktivierung einer Schicht \emph{l} aus der Funktion herausgezogen und mit dem Buchstaben \emph{z} versehen. $z^l$ kann nun in die Aktivierungsfunktion $\sigma$ eingesetzt werden. Im folgenden werde ich diese Ausgabewerte welche in die Aktivierungsfunktion hereingereicht werden stets mit \emph{z-Wert} abkürzen. 
 
-\paragraph{Zusammenfassung} der bisherigen Beschreibungen
+\paragraph{Zusammenfassung} der bisherigen Beschreibungen.
 
 \begin{mytheo}{Backpropagation - Notation}{theoexample}
 
@@ -93,7 +93,6 @@ Ziel des Backpropagation-Algorithmus ist es herauszubekommen welche Gewichte und
 \end{equation}
 
 \end{mytheo}
-
 
 % \begin{figure}[!htb]
 %	\centering
