finished first draft

--- a/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
+++ b/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
@@ -15,3 +15,9 @@ Daraus resultieren folgende Leitfragen:
 \import{aktuelleEntwicklung/multilayerPerceptron/}{multilayerPerceptron.tex}
 \clearpage
 
+\import{aktuelleEntwicklung/recurrentNN/}{recurrentNN.tex}
+\clearpage
+
+\import{aktuelleEntwicklung/fazit/}{fazit.tex}
+\clearpage
+
