--- a/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
+++ b/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
@@ -49,6 +49,9 @@ Die Konstante \emph{b} beschreibt dabei die Steilheit der Kurve. Die Ableitung d
 \end{figure}
 
 \subparagraph{Tangens Hyperbolicus}
+
+Todo diesen Teil vielleicht wieder rausnehmen???
+
 Die Funktion wird auch häufig als Aktivierungsfunktion verwendet und besitzt die Gleichung sowie die Ableitungen: 
 
 \begin{equation}
