--- a/paper/tex/geschichtliches/fazit/fazit.tex
+++ b/paper/tex/geschichtliches/fazit/fazit.tex
@@ -1,5 +1,8 @@
 \section{Fazit}
 
+
+\subsection{Beantwortung der Leitfragen}
+
 Generell wurden folgende Leitfragen zumindest in Teilen besprochen: 
 
 \begin{itemize}
@@ -7,4 +10,6 @@ Generell wurden folgende Leitfragen zumindest in Teilen besprochen:
 \item Welche Entwicklungen hat das Neuronale Netz von damals zu heute durchgemacht?
 \end{itemize}
 
-Der Begriff des Deeplearnings wurde in diesem Abschnitt noch überhaupt nicht besprochen da es sich hierbei um eine sehr weiterentwickelte Form des Begriff \emph{Machine Learning} handelt. Dies wird allerdings im kommenden Abschnitt besprochen (todo Referenz). Generell wurden jedoch die wesentlichen Vorstufen grob angerissen. Wir haben die Ursprünge der ersten künstlichen Neuronen (siehe MPN \ref{sc:mpn}, Perceptron \ref{sc:per}) gesehen und wie diese auf der Biologie des Menschen basieren. Darüber hinaus wurden die Verbesserungen der ersten Versuche vorgestellt (siehe Adeline \ref{sc:adel}). Außerdem haben ich die ersten Anfänge des künstlichen Lernens mithilfe von Lernalgorithmen sowie die Mathematik dahinter beschrieben (siehe \ref{ss:la}). Um auch einen kleinen praktischen Einschnitt zu haben wurde ebenfalls grob beschrieben wie ein Rechner in der Lage ist bestimmte Merkmale eines Bildes zu erkennen (siehe CNN \ref{sc:cnn}). 
+Bei dem Begriff des Deeplearnings handelt es sich um eine Weiterentwicklung des \emph{Machine Learnings}. Er beschreibt eine Gruppe von Netzstrukturen welche zahlreiche Zwischenschichten beinhalten (englisch \emph{hidden Layers}). Das \emph{Convolutional Neural Network} ist dabei ein Vertreter einer solchen Struktur. Diese Art von Architektur benötigen spezielle Trainingsmechanismen. Einen werde ich im folgenden Abschnitt näher behandeln (Todo Referenz einfügen). 
+
+Generell wurden jedoch die wesentlichen Vorstufen grob angerissen. Wir haben die Ursprünge der ersten künstlichen Neuronen (siehe MPN \ref{sc:mpn}, Perceptron \ref{sc:per}) gesehen und wie diese auf der Biologie des Menschen basieren. Darüber hinaus wurden die Verbesserungen der ersten Versuche vorgestellt (siehe Adeline \ref{sc:adel}). Außerdem haben ich die ersten Anfänge des künstlichen Lernens mithilfe von Lernalgorithmen sowie die Mathematik dahinter beschrieben (siehe \ref{ss:la}). Um auch einen kleinen praktischen Einschnitt zu haben wurde ebenfalls grob beschrieben wie ein Rechner in der Lage ist bestimmte Merkmale eines Bildes zu erkennen (siehe CNN \ref{sc:cnn}). 
