added missing references

--- a/paper/tex/aktuelleEntwicklung/fazit/fazit.tex
+++ b/paper/tex/aktuelleEntwicklung/fazit/fazit.tex
@@ -10,4 +10,6 @@ Generell wurden folgende Leitfragen zumindest in Teilen besprochen:
 \item Welche Ansätze und Architekturen sind zur Zeit state-of-the-art?
 \end{itemize}
 
-Der Fokus dieses Abschnitts lag im wesentlichen auf dem Verständnis des \emph{Backpropagation}-Algorithmus. Allerdings wurden ebenfalls mehrere wichtige Architekturen grob erläutert. Hierbei hat man einen kurzen Einblick in die Struktur sowie deren Verwendungszwecke in der Industrie erlangt. 
+Der Fokus dieses Abschnitts lag im wesentlichen auf dem Verständnis des \emph{Backpropagation}-Algorithmus. Allerdings wurden ebenfalls mehrere wichtige Architekturen grob erläutert. Hierbei hat man einen kurzen Einblick in die Struktur sowie deren Verwendungszwecke in der Industrie erlangt.
+
+Für eine sehr umfangreiche Übersicht über die verschiedenen Architekturen lohnt sich ein Blick in folgende Quelle \cite{archiOverview}.
