--- a/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
+++ b/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
@@ -16,7 +16,7 @@ Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \em
 
 \paragraph{Zusammenfassung - Aufbau}
 
-Da diese Architektur als Grundlage für die Erklärung des Backpropagation-Algorithmus gewählt wurde folgt nur eine kurze Zusammenfassung des Aufbaus. Für eine ausführliche Erklärung sämtlicher Notations-Regeln etc. siehe (todo Referenz einfügen). 
+Da diese Architektur als Grundlage für die Erklärung des Backpropagation-Algorithmus gewählt wurde folgt nur eine kurze Zusammenfassung des Aufbaus. Für eine ausführliche Erklärung sämtlicher Notations-Regeln etc. siehe Abschnitt \ref{ss:notationBP}. 
 
 Diese Struktur gilt als mehrschichtige vorwärtsgekoppeltes Netzwerk. Teilweise wird sie auch als Mehrschichten-Perzeptron bezeichnet weil sie einem Perzeptron-Netzwerk mit mehreren Schichten sehr ähnelt. Dieses Netzwerk besteht aus einer Eingabeschicht, einer oder mehrerer innerer Schichten\footnote{in englisch auch häufig \emph{hiden Layers} genannt}, und einer Ausgabeschicht. 
 
@@ -49,8 +49,6 @@ Die Konstante \emph{b} beschreibt dabei die Steilheit der Kurve. Die Ableitung d
 \end{figure}
 
 \subparagraph{Tangens Hyperbolicus}
-
-Todo diesen Teil vielleicht wieder rausnehmen???
 
 Die Funktion wird auch häufig als Aktivierungsfunktion verwendet und besitzt die Gleichung sowie die Ableitungen: 
 
